--- a/.env
+++ b/.env
@@ -1,15 +1,25 @@
-# 由于是批量替换，注意前后覆盖	
-# 例如：CONTAINER必须在后面	
-CONTAINER_NAME=aria2	
-CONTAINER=septnn/aria2:2.0	
-WORK_PATH=/home/aria2	
-ARIA_DOWNLOAD_PTAH=/home/aria2/download	
+# 由于是批量替换，注意前后覆盖
+# 例如：CONTAINER必须在后面
+# 容器名字
+CONTAINER_NAME=aria2
+# 容器版本
+CONTAINER=septnn/aria2:2.0
+# 容器工作路径	
+WORK_PATH=/home/aria2
+# 下载目录
+ARIA_DOWNLOAD_PTAH=/home/aria2/download
+# 容器端口8030-8130
 ARIA_START_PORT=8030	
-ARIA_END_PORT=8130	
-ARIA_NGINX_PORT=8030	
-ARIA_RPC_PORT=8031	
-ARIA_BT_PORT=8032	
-ARIA_DHT_START_PORT=8040	
-ARIA_DHT_STOP_PORT=8130	
-ARIA_RPC_SECRET=LTQWCM	
+ARIA_END_PORT=8130
+# nginx端口
+ARIA_NGINX_PORT=8030
+# rpc端口
+ARIA_RPC_PORT=8031
+# bt端口
+ARIA_BT_PORT=8032
+# dht端口8040-8130
+ARIA_DHT_START_PORT=8040
+ARIA_DHT_STOP_PORT=8130
+# 密码
+ARIA_RPC_SECRET=LTQWCM
 # 结束 
